--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "bootstrap": "~3.3.5",
     "dat.gui": "dataarts/dat.gui#^0.6.2",
-    "colz": "carloscabo/colz"
+    "leaflet": "Leaflet/Leaflet#^1.0.2"
   },
   "overrides": {
     "bootstrap": {
@@ -14,6 +14,9 @@
         "dist/js/bootstrap.js",
         "dist/fonts/*"
       ]
+    },
+    "dat.gui": {
+      "main": ["build/dat.gui.css", "build/dat.gui.js"]
     }
   },
   "devDependencies": {
